package model.validation.signup;

public class SignupRequest {
    public String firstName;
    public String lastName;
    public String email;
    public String phone;
    public String password;
    public String confirmPassword;
    public String role;
    public boolean acceptedTerms;
}
